Add partner financing, invoice instalments and incoming payment ledger